fix(@clayui/css): Cadmin Reference Mark vertical alignment when it is used directly on the icon

--- a/packages/clay-css/src/scss/cadmin/components/_type.scss
+++ b/packages/clay-css/src/scss/cadmin/components/_type.scss
@@ -176,10 +176,11 @@ strong {
 // Reference Mark
 
 .reference-mark {
-	display: inline-block;
-	font-size: $cadmin-reference-mark-font-size;
-	position: relative;
-	vertical-align: $cadmin-reference-mark-vertical-align;
+	@include clay-css($cadmin-reference-mark);
+
+	&.lexicon-icon {
+		@include clay-css(map-get($cadmin-reference-mark, lexicon-icon));
+	}
 }
 
 // Kbd
